[gd_scene load_steps=13 format=3 uid="uid://dww7376cibolg"]

[ext_resource type="Texture2D" uid="uid://fi8q2wvpqd47" path="res://assets/bg.png" id="1_muiut"]
[ext_resource type="Script" uid="uid://br2joyb1kgobq" path="res://scenes/main.gd" id="1_sgikt"]
[ext_resource type="PackedScene" uid="uid://vww8ja3c0xh2" path="res://scenes/ExplosionParticles.tscn" id="2_eb6dy"]
[ext_resource type="PackedScene" uid="uid://eyxfen2vvqxo" path="res://scenes/tile_map.tscn" id="3_lemmq"]
[ext_resource type="PackedScene" uid="uid://d05640hmpi44l" path="res://scenes/hud.tscn" id="4_lcatd"]
[ext_resource type="PackedScene" uid="uid://01pxeovkiic5" path="res://scenes/game_over.tscn" id="5_4jsxu"]
[ext_resource type="AudioStream" uid="uid://bf6bdnc3pwuo" path="res://assets/ClickSound.wav" id="6_ya4ey"]
[ext_resource type="AudioStream" uid="uid://einfo5io0q66" path="res://assets/BoomSound.wav" id="7_eb6dy"]
[ext_resource type="AudioStream" uid="uid://dkiq2vcuia70a" path="res://assets/WinSound.wav" id="8_trceg"]
[ext_resource type="AudioStream" uid="uid://cowwkw6vast4c" path="res://assets/FlagPlaceSound.wav" id="9_a8y0u"]
[ext_resource type="AudioStream" uid="uid://cvasd0q5xoa2a" path="res://assets/FlagRemoveSound.wav" id="10_jkv2x"]
[ext_resource type="AudioStream" uid="uid://d1fcu144gywk" path="res://assets/TwistSound.wav" id="11_jbj1t"]

[node name="Main" type="Node"]
script = ExtResource("1_sgikt")
explosion_particles_scene = ExtResource("2_eb6dy")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-3, -48)
texture = ExtResource("1_muiut")
offset = Vector2(375, 350)

[node name="TileMap" parent="." instance=ExtResource("3_lemmq")]

[node name="HUD" parent="." instance=ExtResource("4_lcatd")]

[node name="ClickCounter" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0

[node name="GameOver" parent="." instance=ExtResource("5_4jsxu")]
process_mode = 2

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ya4ey")
volume_db = 24.0

[node name="BoomSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_eb6dy")
volume_db = 24.0

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_trceg")
volume_db = 24.0

[node name="FlagPlaceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_a8y0u")
volume_db = 24.0

[node name="FlagRemoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_jkv2x")
volume_db = 24.0

[node name="TwistSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_jbj1t")
volume_db = 24.0

[connection signal="end_game" from="TileMap" to="." method="_on_tile_map_end_game"]
[connection signal="flag_placed" from="TileMap" to="." method="_on_tile_map_flag_placed"]
[connection signal="flag_removed" from="TileMap" to="." method="_on_tile_map_flag_removed"]
[connection signal="game_won" from="TileMap" to="." method="_on_tile_map_game_won"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
